TODO for 0.5.0
==============
- Java 8 (or later) / OSGI: "JavaSE;version=1.8"  / https://www.aqute.biz/2020/03/02/osgi-on-android.html
- lwjgl 3.0
- Android compatibility
- libGWT compatibility?
- CI
- Java 9/10/11 ?
- Beautify CHANGELOG -> .md
- Issue #22
- Cleanup GimMath / GimGeometry  (e.g. remove RefFloat)
-

Check:
- Demo -> Test?  E.g. DemoI? DemoSpace(-Stress)? DemoStep? ....
- DemoPlane2D / DemoBasket(-Convex)
- Performance with DemoCards -> "TODO CHECK-TZ" in steppers


ODE2: DemoCard with 18 layers: Very weird, collapses slowly, some cards floating horizontally...
ODE16.2: Much better. Floating card is actually fine (in theory). But3rd row collapses and
 after a while, the outer card stops in a weird place.

0.5.0
=====
- Update to ODE 0.15.1
  - This includes incrrewsed stability, e.g. the DemoCards won't collapse anymore when 30 levels high.
  - WARNING: Still missing: libccd and trimesh collider updates.
- Changed CI build requirements:
  - Removed openjdk7: Not required. source compatibility is still set to 7, but should
    be safe to change to 8 now (Android Nougat is mostly 8 compatible), this covers > 80% users.
  - Changed oraclejdk build to 11

- WARNING!!!!!
  -> lwjgl requires Java 8!!!  Try lwjgl3 (works with Java 11) and see whether it also works with Java 8!

- Issue #22 / ODE issue #36: https://bitbucket.org/odedevs/ode/issues/36/fix-gimpact-contacts-handling
  This has been resolved, We need to remove the workaround in OdeConfig::50
// TODO TZ check
// TODO TZ fix
// TODO CHECK-TZ


Java Version
============
Summary:
- We should aim for Oreo or later (Android 8.0, released 2017, API Level 26: https://apilevels.com/)
- Java 8 should be fine.
- Try animal-sniffer plugin for higher versions, e.g. Java 9


- Android Runtime replaced Dalvik as default Runtime in Android 5: https://en.wikipedia.org/wiki/Android_version_history
- Android 8 (Oreo) is about 8% share:
  - https://apilevels.com/